Fix width and remove gap from cards

--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -32,7 +32,7 @@
 }
 
 .col-3 {
-  width:calc((100% /3) - 2rem);
+  width:calc((100% /3) - 3rem);
   height: auto;
 }
 
@@ -92,9 +92,7 @@ main {
 .top-area-text > div {margin-bottom: 2.5rem;}
 .top-area-text > div:last-child {margin-bottom: 1.3rem;}
 
-.main-content-area {
-  margin-top: 6rem;
-}
+.main-content-area {margin-top: 8rem;}
 
 .input-container {
   margin-bottom:2rem;
@@ -108,25 +106,14 @@ main {
   border-bottom: 1px solid lightgray
 }
 
-.main-card {
-  padding: 2rem;
-}
+.main-card {padding: 2rem;}
 
-.main-card > * {
-  margin-bottom: 1rem;
-}
+.main-card > * {margin-bottom: 1rem;}
+.main-top-card {margin-bottom: 3rem;}
+.main-top-card > * {margin-bottom: 0.8rem;}
+.main-card .border-small {margin-block: 3.5rem;}
 
-.main-top-card {
-  margin-bottom: 3rem;
-}
 
-.main-top-card > * {
-  margin-bottom: 0.8rem;
-}
-
-.main-card .border-small {
-  margin-block: 3.5rem;
-}
 
 
 /* Team area */
@@ -218,9 +205,8 @@ h2 {
   font-size: 4rem;
 }
 
-.top-card, 
-.main-card {
-  font-size:0.75rem;
+.cards h3 {
+  font-size:1.4rem;
 }
 
 .price {font-size: 0.8rem;}
